[project]
name = "queue-optimization"
version = "0.1.0"
description = ""
authors = [
    {name = "pedroaba",email = "pedr.augustobarbosa.aparecido@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy (>=2.2.6,<3.0.0)",
    "flet (>=0.28.2,<0.29.0)",
    "matplotlib (>=3.10.3,<4.0.0)"
]

[tool.poetry]
packages = [{include = "queue_optimization", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
